[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mt_oil"
version = "0.1.0"
description = "Montana Oil & Gas Production Analysis and Prediction"
readme = "README.md"
authors = [
    { name = "Joseph Romani", email = "joseph.romani@example.com" }
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.1.4",
    "seaborn>=0.13.0",
    "scikit-learn>=1.3.2",
    "numpy>=1.26.2",
    "scipy>=1.11.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=24.1.0",
    "pre-commit>=3.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mt_oil"]
